--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@f3ve/vue-markdown-it": "^0.2.2",
     "@tailwindcss/typography": "^0.5.13",
+    "buffer": "^6.0.3",
+    "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "marked": "^13.0.3",
     "vue": "^3.4.31",
