--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.7",
     "vite": "^4.5.3",
     "vite-plugin-md": "^0.21.5"
